Fixed width of Yelp logo on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -448,6 +448,12 @@ header.open .hamburger span:nth-child(4) {
     text-align: center;
 }
 
+/* fixing the width of yelp logo */
+@media (max-width:390px){
+    .about-content > a:nth-of-type(2) img {
+        width: 100% !important;
+    }
+}
 .services {
     display: -webkit-box;
     display: -ms-flexbox;
